added email as link

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,5 +101,13 @@ p {
   margin-top: 15%;
 }
 
+input {
+  border: none;
+  outline:none;
+  background: rgba(0,0,0,0);
+  color: #3366BB;
+  cursor: pointer;
+}
+
 
 
