linked images and styles for index

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,7 +6,7 @@
   <body>
 
   <div class="main_page">
-  <div align="center"><img src="public/images/ribs.jpg" class="background"></div>
+  <div align="center"><img src="images/ribs.jpg" class="background"></div>
   <div class="cover"></div>
     <div class="container" id="center-content">
     <br>
