--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,14 +4,14 @@
 
 <!-- STYLESHEETS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="public/css/styles.css">
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 
 <!-- VENDOR SCRIPTS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- APPLICATION SCRIPTS -->
-<script src="public/js/app.js"></script>
+<script src="js/app.js"></script>
 
 <!-- Font -->
 <link href='https://fonts.googleapis.com/css?family=Goblin+One' rel='stylesheet' type='text/css'>
