--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,22 +6,23 @@
   <body>
 
   <div class="main_page">
-  <div align="center"><img src="images/ribs.jpg" class="background"></div>
-  <div class="cover"></div>
-    <div class="container" id="center-content">
+    <div align="center"><img src="images/ribs.jpg" class="background"></div>
+    <div class="cover"></div>
+      <div class="container" id="center-content">
+      <br>
+      <% include ../partials/header %>
+    </div>
     <br>
-    <% include ../partials/header %>
-  </div>
-<br>
-<br>
-  <div class="container">
-    <div class="text-center myself">
+    <br>
+    <div class="container">
+      <div class="text-center myself">
         <h1>Noah Wimmer</h1>
         <h3>Developer</h3>
+      </div>
     </div>
   </div>
-</div>
 
-
+ <% include ../partials/footer %>
   </body>
+
 </html>
