--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,13 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="index.html">Home</a>
+    <a class="navbar-brand" href="/">Home</a>
   </div>
   <div class="collapse navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="about_me.html">About Me</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="about_me">About Me</a></li>
+        <li><a href="portfolio">Portfolio</a></li>
+        <li><a href="contact">Contact</a></li>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
