--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -6,6 +6,16 @@
   <body>
     <% include ../partials/header %>
 
+  <br>
+  <br>
+  <div class="container text-center">
+    <h1 class="contact-title">Noah Wimmer</h1>
+    <p>Email me at <a href="mailto:nwimmer123@yahoo.com">nwimmer123@yahoo.com</a></p>
+    <p>Check out my work on <a href="https://github.com/nwimmer123">GitHub</a></p>
+    <p>Here's my <a href="https://www.linkedin.com/in/noahwimmer">Linked In</a> profile</p>
+  </div>
+
+
     <% include ../partials/footer %>
   </body>
 
