--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,14 +1,15 @@
-.cover {
-  background-color: #3A0A0A;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: .6;
-  z-index: -100;
-}
 
+#banner {
+  background:url('../images/ribs.jpg') no-repeat center center;
+  min-height:100%;
+  background-size:cover;
+  padding: 120px 0px 80px 0px;
+  font-size: large;
+  color: white;
+  text-shadow: 2px 2px 4px black;
+  font-family: 'Goblin One', cursive;
+  margin-bottom: 25px;
+}
 .navbar {
   opacity: .6;
   color: black;
@@ -32,23 +33,16 @@ h3 {
   font-size: 40px;
 }
 
-.background {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -500;
-}
-
 .about_me {
   font-family: 'Roboto Slab', serif;
   padding: 15px;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  margin-right: 20%;
-  margin-left: 20%;
-  margin-top: 15px;
+}
+
+.me {
+  max-height: 200px;
+  border-radius: 10px;
+  float: left;
+  margin: 0px 20px 10px 5px;
 }
 
 .nav.navbar-nav.navbar-right li a {
@@ -91,10 +85,7 @@ p {
  display: none;
 }
 
-.surf {
-  max-height: 140px;
-  border-radius: 10px;
-}
+
 
 .contact-title {
   font-family: 'Goblin One', cursive;
@@ -109,9 +100,9 @@ input {
   cursor: pointer;
 }
 
-
-
-footer {
-
-}
+/*footer {
+  position: fixed;
+  top: 92%;
+  left: 7%;
+}*/
 
