added footer and contact

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,9 +100,7 @@ input {
   cursor: pointer;
 }
 
-/*footer {
-  position: fixed;
-  top: 92%;
-  left: 7%;
-}*/
+footer {
+  margin: 15px 0px 15px 0px;
+}
 
