--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 
-#banner {
-  background:url('../images/ribs.jpg') no-repeat center center;
+
+.banner {
+  background:url('../images/ribs3.png') no-repeat center center;
   min-height:100%;
   background-size:cover;
   padding: 120px 0px 80px 0px;
@@ -9,7 +10,11 @@
   text-shadow: 2px 2px 4px black;
   font-family: 'Goblin One', cursive;
   margin-bottom: 25px;
+  z-index: -200;
 }
+
+
+
 .navbar {
   opacity: .6;
   color: black;
