fixed title colors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,8 +6,8 @@
   background-size:cover;
   padding: 120px 0px 80px 0px;
   font-size: large;
-  color: white;
-  text-shadow: 2px 2px 4px black;
+  color: #ffcce6;
+  text-shadow: 2px 2px 4px #5900b3;
   font-family: 'Goblin One', cursive;
   margin-bottom: 25px;
   z-index: -200;
