--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,41 +1,12 @@
-
-
 .banner {
   background:url('../images/ribs3.png') no-repeat center center;
   min-height:100%;
   background-size:cover;
   padding: 120px 0px 80px 0px;
-  font-size: large;
   color: #ffcce6;
   text-shadow: 2px 2px 4px #5900b3;
   font-family: 'Goblin One', cursive;
   margin-bottom: 25px;
-  z-index: -200;
-}
-
-
-
-.navbar {
-  opacity: .6;
-  color: black;
-}
-
-.myself {
-  font-family: 'Goblin One', cursive;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  text-shadow: 3px 3px #2F087D;
-  color: #DCBABA;
-
-}
-h1 {
-  font-size: 60px;
-}
-
-h3 {
-  font-size: 40px;
 }
 
 .about_me {
@@ -50,6 +21,11 @@ h3 {
   margin: 0px 20px 10px 5px;
 }
 
+.navbar {
+  opacity: .6;
+  color: black;
+}
+
 .nav.navbar-nav.navbar-right li a {
     color: black;
     padding-left: 20px;
@@ -57,52 +33,12 @@ h3 {
     font-family: 'Roboto Slab', serif;
 }
 
-.portfolio_pic {
-  max-height: 75px;
-  border-radius: 10px;
-  float: right;
-}
-
-.portfolio_title {
-  font-family: 'Goblin One', cursive;
-  font-size: 20px;
-}
-
-.portfolio_text {
-  font-family: 'Roboto Slab', serif;
-}
-
 p {
   font-family: 'Roboto Slab', serif;
 }
 
-.border-between > [class*='col-']:before {
- background: #e3e3e3;
- bottom: 0;
- content: " ";
- left: 0;
- position: absolute;
- width: 1px;
- top: 0;
-}
-
-.border-between > [class*='col-']:first-child:before {
- display: none;
-}
-
-
-
-.contact-title {
+.title {
   font-family: 'Goblin One', cursive;
-  margin-top: 15%;
-}
-
-input {
-  border: none;
-  outline:none;
-  background: rgba(0,0,0,0);
-  color: #3366BB;
-  cursor: pointer;
 }
 
 footer {
