--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,26 +1,3 @@
-.banner {
-  background:url('../images/ribs3.png') no-repeat center center;
-  min-height:100%;
-  background-size:cover;
-  padding: 120px 0px 80px 0px;
-  color: #ffcce6;
-  text-shadow: 2px 2px 4px #5900b3;
-  font-family: 'Goblin One', cursive;
-  margin-bottom: 25px;
-}
-
-.about_me {
-  font-family: 'Roboto Slab', serif;
-  padding: 15px;
-}
-
-.me {
-  max-height: 200px;
-  border-radius: 10px;
-  float: left;
-  margin: 0px 20px 10px 5px;
-}
-
 .navbar {
   opacity: .6;
   color: black;
@@ -39,6 +16,39 @@ p {
 
 .title {
   font-family: 'Goblin One', cursive;
+}
+
+.banner {
+  background:url('../images/ribs3.png') no-repeat center center;
+  min-height:100%;
+  background-size:cover;
+  padding: 120px 0px 80px 0px;
+  color: #ffcce6;
+  text-shadow: 2px 2px 4px #5900b3;
+  font-family: 'Goblin One', cursive;
+  margin-bottom: 25px;
+}
+
+.me {
+  max-height: 200px;
+  border-radius: 10px;
+  float: left;
+  margin: 0px 20px 10px 5px;
+}
+
+.about_me {
+  font-family: 'Roboto Slab', serif;
+  padding: 15px;
+}
+
+.portfolio_pic {
+  max-height: 250px;
+  border: medium groove #660033;
+}
+
+.portfolio_text {
+  max-height: 250px;
+  max-width: 350px;
 }
 
 footer {
