--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,17 +41,34 @@ p {
   padding: 15px;
 }
 
+
+
 .portfolio_pic {
   max-height: 250px;
   border: medium groove #660033;
+
+
 }
 
 .portfolio_text {
   max-height: 250px;
   max-width: 350px;
+
 }
 
 footer {
   margin: 15px 0px 15px 0px;
 }
 
+#test_text {
+  margin-top: -220px;
+  min-height: 210px
+
+}
+
+#test_pic {
+
+
+ 
+
+}
