--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -65,3 +65,37 @@ footer {
   max-height: 250px;
   border: medium groove #660033;
 }
+
+.portfolio_container {
+  /*width:50%;*/
+  height:250px;
+  overflow: hidden;
+  background: rgba(0, 0, 0, 0.5);
+  transition: all .3s ease;
+}
+
+.portfolio_container:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+
+.text {
+  margin-top: -220px;
+  min-height: 210px;
+  /*font-size: 2em;*/
+  opacity: 0;
+  transition: all .3s ease;
+}
+
+.portfolio_container:hover .text {
+ opacity:1;
+
+/*#pic0 {
+  margin-top: -220px;
+  min-height: 210px
+
+}
+
+#text0 {
+  max-height: 250px;
+  border: medium groove #660033;
+}*/
