--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-  opacity: .6;
+  opacity: .8;
   color: black;
 }
 
@@ -41,33 +41,13 @@ p {
   padding: 15px;
 }
 
-.portfolio_pic {
-  max-height: 250px;
-  border: medium groove #660033;
-}
 
-.portfolio_text {
-  max-height: 250px;
-  max-width: 350px;
-}
 
 footer {
   margin: 15px 0px 15px 0px;
 }
 
-#test_text {
-  margin-top: -220px;
-  min-height: 210px
-
-}
-
-#test_pic {
-  max-height: 250px;
-  border: medium groove #660033;
-}
-
 .portfolio_container {
-  
   height:250px;
   overflow: hidden;
   background: rgba(0, 0, 0, 0.5);
@@ -75,7 +55,7 @@ footer {
 }
 
 .portfolio_container:hover {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 .text {
@@ -98,3 +78,10 @@ footer {
   border: medium groove #660033;
 }
 
+body {
+  background: white; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#d633ff, white, #d633ff); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#d633ff, white, #d633ff); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#d633ff, white, #d633ff); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#d633ff, white, #d633ff); /* Standard syntax */
+}
